@@ -1,7 +1,7 @@
 /*
 //
 //  Copyright 1997-2009 Torsten Rohlfing
-//  Copyright 2004-2009 SRI International
+//  Copyright 2004-2010 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
 //
@@ -51,6 +51,7 @@
 #include <cmtkDeblurringVolumeReconstruction.h>
 
 #include <cmtkXformIO.h>
+#include <cmtkTransformChangeFromSpaceAffine.h>
 
 #include <algorithm>
 #include <map>
@@ -354,6 +355,16 @@ main( const int argc, const char* argv[] )
   if ( ExcludeFirstImage )
     ReconstructionGridPath = ImagePaths[0];
 
+  if ( ReconstructionGridPath )
+    {
+    ReconGrid = cmtk::UniformVolume::SmartPtr( cmtk::VolumeIO::ReadOriented( ReconstructionGridPath ) );
+    if ( ! ReconGrid )
+      {
+      cmtk::StdErr << "ERROR: Could not read reconstruction grid from image " << ReconstructionGridPath << "\n";
+      exit( 1 );
+      }
+    }
+  
   for ( size_t idx = (ExcludeFirstImage?1:0); idx < ImagePaths.size(); ++idx )
     {
     cmtk::UniformVolume::SmartPtr image( cmtk::VolumeIO::ReadOriented( ImagePaths[idx], Verbose ) );
@@ -378,22 +389,19 @@ main( const int argc, const char* argv[] )
 	}
       }
 
+    if ( affineXform->m_MetaInformation[cmtk::META_SPACE] != cmtk::AnatomicalOrientation::ORIENTATION_STANDARD )
+      {
+      cmtk::TransformChangeFromSpaceAffine toStandardSpace( *affineXform, *ReconGrid, *image );
+      *affineXform = toStandardSpace.GetTransformation();
+      affineXform->m_MetaInformation[cmtk::META_SPACE] = cmtk::AnatomicalOrientation::ORIENTATION_STANDARD;
+      }
+
     Images.push_back( image );
     Xforms.push_back( affineXform );
     }
 
   if ( ! ReconGrid )
     ReconGrid = Images[0];
-  
-  if ( ReconstructionGridPath )
-    {
-    ReconGrid = cmtk::UniformVolume::SmartPtr( cmtk::VolumeIO::ReadOriented( ReconstructionGridPath ) );
-    if ( ! ReconGrid )
-      {
-      cmtk::StdErr << "ERROR: Could not read reconstruction grid from image " << ReconstructionGridPath << "\n";
-      exit( 1 );
-      }
-    }
   
   if ( UseCropRegion )
     {
